--- a/02. 语法和API/ES语法/00. 基础语法/03. Number.md
+++ b/02. 语法和API/ES语法/00. 基础语法/03. Number.md
@@ -42,14 +42,36 @@
 
 判断两个小数进行加法运算是否精确的简单函数：
 
-`javaScript function judgeFloat(n, m) { const binaryN = n.toString(2); const binaryM = m.toString(2); console.log(`${n}的二进制是    ${binaryN}`);
-      console.log(`${m}的二进制是 ${binaryM}`);
-      const MN = m + n;
-      const accuracyMN = (m * 100 + n * 100) / 100;
-      const binaryMN = MN.toString(2);
-      const accuracyBinaryMN = accuracyMN.toString(2);
-      console.log(`${n}+${m}的二进制是${binaryMN}`); console.log(`${accuracyMN}的二进制是    ${accuracyBinaryMN}`);
-      console.log(`${n}+${m}的二进制再转成十进制是${to10(binaryMN)}`); console.log(`${accuracyMN}的二进制是再转成十进制是${to10(accuracyBinaryMN)}`); console.log(`${n}+${m}在 js 中计算是${(to10(binaryMN) === to10(accuracyBinaryMN)) ? '' : '不'}准确的`); } function to10(n) { const pre = (n.split('.')[0] - 0).toString(2); const arr = n.split('.')[1].split(''); let i = 0; let result = 0; while (i < arr.length) { result += arr[i] * Math.pow(2, -(i + 1)); i++; } return result; } judgeFloat(0.1, 0.2); judgeFloat(0.6, 0.7); `
+```javaScript 
+function judgeFloat(n, m) { 
+  const binaryN = n.toString(2); 
+  const binaryM = m.toString(2); 
+  console.log(`${n}的二进制是    ${binaryN}`);
+  console.log(`${m}的二进制是 ${binaryM}`);
+  const MN = m + n;
+  const accuracyMN = (m * 100 + n * 100) / 100;
+  const binaryMN = MN.toString(2);
+  const accuracyBinaryMN = accuracyMN.toString(2);
+  console.log(`${n}+${m}的二进制是${binaryMN}`); 
+  console.log(`${accuracyMN}的二进制是    ${accuracyBinaryMN}`);
+  console.log(`${n}+${m}的二进制再转成十进制是${to10(binaryMN)}`); 
+  console.log(`${accuracyMN}的二进制是再转成十进制是${to10(accuracyBinaryMN)}`); console.log(`${n}+${m}在 js 中计算是${(to10(binaryMN) === to10(accuracyBinaryMN)) ? '' : '不'}准确的`);
+} 
+
+function to10(n) { 
+  const pre = (n.split('.')[0] - 0).toString(2); 
+  const arr = n.split('.')[1].split(''); 
+  let i = 0; 
+  let result = 0; 
+  while (i < arr.length) { 
+    result += arr[i] * Math.pow(2, -(i + 1)); i++; 
+  } 
+  return result; 
+} 
+  
+judgeFloat(0.1, 0.2); 
+judgeFloat(0.6, 0.7); 
+```
 
 输出：
 
@@ -119,11 +141,11 @@ IEEE754 标准包含一组实数的二进制表示法。它有三部分组成：
 
 但第一步和第三步都有可能**丢失精度**。
 
-- js 中的 toString(2)
+- `js` 中的 `toString(2)`
 
 由于尾数位只能存储 52 个数字，有效数字第 53 位及以后的数字是不能存储的，它遵循，如果是 1 就向前一位进 1，如果是 0 就舍弃的原则。
 
-`javaScript
+```javaScript
 // 如果计算机没有存储空间的限制，0.1 的二进制应该是
 0.00011001100110011001100110011001100110011001100110011001...
 
@@ -138,7 +160,7 @@ IEEE754 标准包含一组实数的二进制表示法。它有三部分组成：
 
 // 实际 JS 计算得到的 0.1+0.2 的二进制
 0.0100110011001100110011001100110011001100110011001101
-`
+```
 
 正是由于这样的存储，在这里有了精度丢失，导致了 `0.1 + 0.2 !== 0.3`。
 
@@ -152,21 +174,14 @@ IEEE754 标准包含一组实数的二进制表示法。它有三部分组成：
 
 js 封装四则运算 `Arithmetic.js`
 
-`javaScript
-/\*\*
-
--
-- [js 小数的数学运算和四舍五入精度问题](https://juejin.im/post/5e3bb243f265da573a01e396)
-  \*/
-
-/\*\*
-
-- 带有小数的加法/减法运算
-- 减法实际上可看成加法，所以如果要做减法，只需第二个参数即被减数传负值即可
-- @param {Number} arg1 - 加数/减数
-- @param {Number} arg2 - 加数/被减数
-  \*/
-  export function addFloat(arg1, arg2) {
+```javaScript
+/**
+ * 带有小数的加法/减法运算
+ * 减法实际上可看成加法，所以如果要做减法，只需第二个参数即被减数传负值即可
+ * @param {Number} arg1 - 加数/减数
+ * @param {Number} arg2 - 加数/被减数
+ * */ 
+export function addFloat(arg1, arg2) {
   let m = 0; // 记录两个加数中最长的小数位长度
   let arg1Str = arg1 + '';
   let arg2Str = arg2 + '';
@@ -178,15 +193,14 @@ js 封装四则运算 `Arithmetic.js`
   arg2Str = arg2.toFixed(m);
   const transferResult = +(arg1Str.replace('.', '')) + +(arg2Str.replace('.', ''));
   return transferResult / Math.pow(10, m);
-  };
+};
 
-/\*\*
-
-- 带有小数的乘法运算
-- @param {Number} arg1 - 因数
-- @param {Number} arg2 - 因数
-  _/
-  export function multiplyFloat(arg1, arg2) {
+/**
+ * 带有小数的乘法运算
+ * @param {Number} arg1 - 因数
+ * @param {Number} arg2 - 因数
+ * */ 
+export function multiplyFloat(arg1, arg2) {
   let m = 0;
   const arg1Str = arg1 + '';
   const arg2Str = arg2 + '';
@@ -196,15 +210,14 @@ js 封装四则运算 `Arithmetic.js`
   arg2StrFloat && (m += arg2StrFloat.length);
   const transferResult = +(arg1Str.replace('.', '')) _ +(arg2Str.replace('.', ''));
   return transferResult / Math.pow(10, m);;
-  };
+};
 
-/\*\*
-
-- 有小数的除法运算
-- @param {Number} arg1 - 除数
-- @param {Number} arg2 - 被除数
-  _/
-  export function divideFloat(arg1, arg2) {
+/**
+ * 有小数的除法运算
+ * @param {Number} arg1 - 除数
+ * @param {Number} arg2 - 被除数
+ * */ 
+export function divideFloat(arg1, arg2) {
   const arg1Str = arg1 + '';
   const arg2Str = arg2 + '';
   const arg1StrFloat = arg1Str.split('.')[1] || '';
@@ -212,8 +225,8 @@ js 封装四则运算 `Arithmetic.js`
   const m = arg2StrFloat.length - arg1StrFloat.length;
   const transferResult = +(arg1Str.replace('.', '')) / +(arg2Str.replace('.', ''));
   return transferResult _ Math.pow(10, m);;
-  };
-  `
+};
+```
 
 * JavaScript 中浮点数比较的问题
 
@@ -222,7 +235,7 @@ js 封装四则运算 `Arithmetic.js`
 
 所以在判断比较两个浮点数时，可以通过这个常量来进行判断比较，定义一个最小的进度范围，误差如果小于这个值，就可以认为已经没有意义了，即不存在误差了。比如，误差范围设为 2 的-50 次方（即 `Number.EPSILON * Math.pow(2, 2)`），即如果两个浮点数的差小于这个值，我们就认为这两个浮点数相等。
 
-`javaScript
+```javaScript
 function withinErrorMargin (left, right) {
 return Math.abs(left - right) < Number.EPSILON \* Math.pow(2, 2);
 }
@@ -232,7 +245,7 @@ withinErrorMargin(0.1 + 0.2, 0.3) // true
 
 1.1 + 1.3 === 2.4 // false
 withinErrorMargin(1.1 + 1.3, 2.4) // true
-`
+```
 
 上面的代码为浮点数运算，部署了一个误差检查函数。
 
@@ -241,3 +254,7 @@ withinErrorMargin(1.1 + 1.3, 2.4) // true
 由与 IEEE 754 双精度 64 位规范的限制：指数位能表示的最大数字：1023(十进制),尾数位能表达的最大数字即尾数位都位 1 的情况。所以 JavaScript 能表示的最大数字即位：
 
 1.111...X 21023 这个结果转换成十进制是 1.7976931348623157e+308,这个结果即为 `Number.MAX_VALUE`。
+
+[js 小数的数学运算和四舍五入精度问题](https://juejin.im/post/5e3bb243f265da573a01e396)
+
+[JavaScript深入之浮点数精度](https://github.com/mqyqingfeng/Blog/issues/155)
