--- a/02. 语法和API/ES语法/00. 基础语法/07.  类型转换.md
+++ b/02. 语法和API/ES语法/00. 基础语法/07.  类型转换.md
@@ -62,7 +62,7 @@
 
 4. 如果只有一个原始值是「字符串」，调用 toString 方法把另一个运算数转换成「字符串」，结果是两个字符串连接成的字符串。
 
-`javaScript
+```javaScript
 1 + '1' // '11'
 2 \* '2' // 4
 [1, 2] + [2, 1] // '1,22,1'
@@ -74,15 +74,15 @@
 'a' + + 'b' // -> "aNaN"
 // 因为 + 'b' -> NaN
 // 你也许在一些代码中看到过 + '1' -> 1
-`
+```
 
 总结：只要是加号运算符，两边都转为基础类型；但是需要注意 {} 是对象还是代码块
 
-## `{}`是对象还是代码块
+## `{}` 是对象还是代码块
 
 一些例子：
 
-`javaScript
+```javaScript
 {a: 1}[1] // [1]
 
 {a: 1}['a'] // ["a"]
@@ -94,7 +94,7 @@
 {a: 1,}['a'] // Uncaught SyntaxError: Unexpected token '}'
 
 {a, 1}[] // []
-`
+```
 
 特点：
 
@@ -104,25 +104,27 @@
 
 验证：
 
-`javaScript {} // {} | 对象 {}; // undefined | 代码块 +{} // NaN | 对象 {}+{} // "[object Object][object Object]" | 对象+对象 {}+{}; // NaN | 代码块+对象 `
+```javaScript 
+{} // {} | 对象 {}; // undefined | 代码块 +{} // NaN | 对象 {}+{} // "[object Object][object Object]" | 对象+对象 {}+{}; // NaN | 代码块+对象 
+```
 
 也就是说 `{}` 后有 `;` 结尾，前无符号，`{}` 才会被翻译为「代码块」。
 
 ## 类型转换举例
 
-`javaScript
+```javaScript
 [] + {} // "[object Object]"
 {} + [] // 0
 
 {} + 0 // 0
 0 + {} // "0[object Object]
-`
+```
 
 其中 `{} + [] = 0`开头 `{}` 并不是空对象的字面量，而是被当作空的代码块。
 
 事实上这个表达式的值就是 `+[]` 的结果，即 `Number([].join(','))`，即为`0`。
 
-`javaScript
+```javaScript
 {}+1 // 1
 // 正确：{} 后有自动插入分号，且前无运算符，看做代码块
 
@@ -169,23 +171,25 @@
 
 []===![] // false
 // 正确：先进行布尔运算，得到 `[]===false`
-`
+```
 
 一个比较少见的例子：
 
-`javaScript {}+[]==[]+{} // true {}+[]==[]+{}; // false `
+```javaScript
+{}+[] == []+{} // true {}+[]==[]+{}; // false 
+```
 
-## 验证分析 ++[[]][+[]]+[+[]]==10
+## 验证分析 `++[[]][+[]]+[+[]]==10`
 
 1. 根据优先级拆分出 + 二元加号
 
-`javaScript
+```javaScript
 (++[[]][+[]])
 
 - ([+[]])
-  `
+```
 
-2. 先分析左边：++[[]][+[]]
+2. 先分析左边：`++[[]][+[]]`
 
 - 1. [] 成员访问的优先级高，先计算 [[]][+[]]；
 
@@ -210,3 +214,7 @@
 4. 结合左右两边式子，得到 1+[0]，其中 [0] 进行 ToPrimitive 对象转换成基础类型，得到 "0"，原式相当于 1+"0"，故得 "10"。
 
 5. "10" == 10
+
+[JavaScript 深入之头疼的类型转换(上)](https://github.com/mqyqingfeng/Blog/issues/159)
+
+[JavaScript深入之头疼的类型转换(下)](https://github.com/mqyqingfeng/Blog/issues/164)
