--- a/02. 语法和API/ES语法/00. 基础语法/08. JS中的相等判断.md
+++ b/02. 语法和API/ES语法/00. 基础语法/08. JS中的相等判断.md
@@ -50,14 +50,14 @@
 
 5. 如果一个是「对象」，另一个是「数值」或「字符串」，通过把 对象转换成基础类型 后，再对两个基础类型的值再比较。
 
-`javaScript
+```javaScript
 [] == ![] // true
 // !的优先级高于==，![]首先会被转换为 false，然后根据上面第三点，false 转换成 Number 类型 0，左侧[]转换为 0，两侧比较相等。
 
 [null] == false // true
 [undefined] == false // true
 // 根据数组的 ToPrimitive 规则，数组元素为 null 或 undefined 时，该元素被当做空字符串处理，所以[null]、[undefined]都会被转换为 0。
-`
+```
 
 任何其他组合，都「不相等」。
 
