--- a/02. 语法和API/ES语法/00. 基础语法/12. 防抖和节流.md
+++ b/02. 语法和API/ES语法/00. 基础语法/12. 防抖和节流.md
@@ -1,6 +1,6 @@
 ## 防抖（debounce）
 
-不管事件触发频率多高，一定在事件触发 `n` 秒后才执行，如果你在一个事件触发的 `n` 秒内又触发了这个事件，就以新的事件的时间为准，  `n` 秒后才执行，总之，触发完事件 `n` 秒内不再触发事件，  `n` 秒后再执行。
+不管事件触发频率多高，一定在事件触发 `n` 秒后才执行，如果你在一个事件触发的 `n` 秒内又触发了这个事件，就以新的事件的时间为准， `n` 秒后才执行，总之，触发完事件 `n` 秒内不再触发事件， `n` 秒后再执行。
 
 1. 应用场景
 
@@ -10,13 +10,13 @@
   window.addEventListener('resize', debounce(handleResize, 200));
 ```
 
-- 搜索框，输入后1000毫秒搜索
+- 搜索框，输入后 1000 毫秒搜索
 
 ```javaScript
   debounce(fetchSelectData, 300);
 ```
 
-- 表单验证，输入1000毫秒后验证
+- 表单验证，输入 1000 毫秒后验证
 
 ```javaScript
   debounce(validator, 1000);
@@ -26,9 +26,9 @@
 
 注意考虑两个问题：
 
-  - 在debounce函数中返回一个闭包，这里用的普通function，里面的setTimeout则用的箭头函数，这样做的意义是让this的指向准确，this的真实指向并非debounce的调用者，而是返回闭包的调用者。
+- 在 debounce 函数中返回一个闭包，这里用的普通 function，里面的 setTimeout 则用的箭头函数，这样做的意义是让 this 的指向准确，this 的真实指向并非 debounce 的调用者，而是返回闭包的调用者。
 
-  - 对传入闭包的参数进行透传。
+- 对传入闭包的参数进行透传。
 
 ```javaScript
   function debounce(event, time) {
@@ -40,7 +40,7 @@
       }, time);
     };
   }
-``` 
+```
 
 有时候需要让函数立即执行一次，再等后面事件触发后等待 `n` 秒执行，此时给 `debounce` 函数一个 `flag` 用于标示是否立即执行。
 
@@ -113,7 +113,6 @@ function debounce (func, wait = 50, immediate = true) {
   }
 }
 ```
-
 
 ## 节流（throttle）
 
@@ -240,7 +239,7 @@ _.throttle = function(func, wait, options) {
       if (!timeout) context = args = null;
     } else if (!timeout && options.trailing !== false) {
       // 判断是否设置了定时器和 trailing
-      
+
       // 没有的话就开启一个定时器
       // 并且不能不能同时设置 leading 和 trailing
       timeout = setTimeout(later, remaining);
@@ -250,3 +249,10 @@ _.throttle = function(func, wait, options) {
 };
 ```
 
+[函数防抖与函数节流](https://zhuanlan.zhihu.com/p/38313717)
+
+[浅谈 JS 防抖和节流](https://segmentfault.com/a/1190000018428170)
+
+[JavaScript专题之跟着underscore学防抖](https://github.com/mqyqingfeng/Blog/issues/22)
+
+[JavaScript专题之跟着 underscore 学节流](https://github.com/mqyqingfeng/Blog/issues/26)
