--- a/02. 语法和API/ES语法/01. 原型与原型链.md
+++ b/02. 语法和API/ES语法/01. 原型与原型链.md
@@ -129,3 +129,9 @@ console.log( sym.constructor ); // ƒ Symbol() { [native code] }
 所以查找属性的时候查到 `Object.prototype` 就可以停止查找了。
 
 [深入探究 Function & Object 鸡蛋问题](https://www.muyiy.cn/blog/5/5.3.html)
+
+[JavaScript深入之从原型到原型链](https://github.com/mqyqingfeng/Blog/issues/2)
+
+[深入理解 JavaScript 原型](https://mp.weixin.qq.com/s/1UDILezroK5wrcK-Z5bHOg)
+
+[深度解析原型中的各个难点](深度解析原型中的各个难点)
