--- a/02. 语法和API/ES语法/02. 作用域和执行上下文栈.md
+++ b/02. 语法和API/ES语法/02. 作用域和执行上下文栈.md
@@ -77,3 +77,7 @@
 作用域链和原型继承查找时的区别：如果去查找一个普通对象的属性，但是在当前对象和其原型中都找不到时，会返回 undefined；但查找的属性在作用域链中不存在的话就会抛出 ReferenceError。
 
 作用域链的顶端是全局对象，在全局环境中定义的变量就会绑定到全局对象中。
+
+[JavaScript深入之词法作用域和动态作用域](https://github.com/mqyqingfeng/Blog/issues/3)
+
+[JavaScript深入之执行上下文栈](https://github.com/mqyqingfeng/Blog/issues/4)
