--- a/02. 语法和API/ES语法/03. 变量对象和作用域链.md
+++ b/02. 语法和API/ES语法/03. 变量对象和作用域链.md
@@ -143,6 +143,8 @@ foo()
   - 4.  fun 执行结束，移出环境栈。foo 因此也执行完毕，继续移出。
   - 5.  javscript 监听到 foo 没有被任何变量所引用，开始实施垃圾回收机制，清空占用内存。
 
+[JavaScript深入之变量对象](https://github.com/mqyqingfeng/Blog/issues/5)
+
 [JavaScript深入之作用域链](https://github.com/mqyqingfeng/Blog/issues/6)
 
 [JavaScript深入之执行上下文](https://github.com/mqyqingfeng/Blog/issues/8)
