--- a/02. 语法和API/ES语法/04. 解析JS中的this.md
+++ b/02. 语法和API/ES语法/04. 解析JS中的this.md
@@ -114,39 +114,39 @@ function setTimeout(fn, delay) { // 等待delay毫秒
 
 - 1. 指向规则
 
-  - 箭头函数没有 ``` prototype ``` 原型，所以箭头函数本身不绑定this，箭头函数中的this相当于普通变量。
+  - 箭头函数没有 `prototype` 原型，所以箭头函数本身不绑定 `this`，箭头函数中的 `this` 相当于普通变量。
 
-  - 箭头函数的 ``` this ``` 寻值行为与普通变量相同，在作用域中逐级寻找。指向在定义时继承自外层第一个普通函数的  ``` this ``` ，跟使用位置没有关系。
+  - 箭头函数的 `this` 寻值行为与普通变量相同，在作用域中逐级寻找。指向在定义时继承自外层第一个普通函数的  `this` ，跟使用位置没有关系。
 
-  - 箭头函数的 ``` this ``` 无法通过 ``` bind ``` ，``` call ``` ，``` apply ```来直接修改（可以间接修改）。
+  - 箭头函数的 `this` 无法通过 `bind` ，`call` ，`apply`来直接修改（可以间接修改）。
 
-  - 改变作用域中被继承的普通函数的 ``` this ``` 指向可以随之改变箭头函数的 ``` this ``` 指向（⚠️：``` new``` 操作符调用普通函数会产生了新的构造函数作用域）。
+  - 改变作用域中被继承的普通函数的 `this` 指向可以随之改变箭头函数的 `this` 指向（⚠️：`new` 操作符调用普通函数会产生了新的构造函数作用域）。
 
-  - 箭头函数外层没有普通函数，严格模式和非严格模式下箭头函数的 ``` this ``` 都会指向全局对象 ``` window ```。
+  - 箭头函数外层没有普通函数，严格模式和非严格模式下箭头函数的 `this` 都会指向全局对象 `window`。
 
 - 2. 箭头函数的不定量参数
 
-  - 箭头函数的 ``` this ``` 指向全局对象时， 使用 ``` arguments ``` 会报未声明的错误 ``` Uncaught ReferenceError: arguments is not defined ```。
+  - 箭头函数的 `this` 指向全局对象时， 使用 `arguments` 会报未声明的错误 `Uncaught ReferenceError: arguments is not defined`。
 
-  - 箭头函数的 ``` this ``` 指向普通函数时，``` arguments ``` 继承于该普通函数。
+  - 箭头函数的 `this` 指向普通函数时，`arguments` 继承于该普通函数。
 
-  - 使用ES6的 rest 参数 （...扩展符）获取（普通/箭头）函数的不定量参数
+  - 使用 `ES6` 的 `rest` 参数 （...扩展符）获取（普通/箭头）函数的不定量参数
 
 - 3. 注意事项  
 
-  - 箭头函数没有 ``` constructor ```，使用 ``` new ``` 调用箭头函数会报错。
+  - 箭头函数没有 `constructor`，使用 `new` 调用箭头函数会报错。
 
-  - 箭头函数不支持 ``` new.target ```，箭头函数的 ``` this ``` 指向全局对象时，使用 ``` new.target ``` 会报错；箭头函数的 ``` this ``` 指向普通函数时，，使用 ``` new.target ``` 指向该普通函数的引用。
+  - 箭头函数不支持 `new.target`，箭头函数的 `this` 指向全局对象时，使用 `new.target` 会报错；箭头函数的 `this` 指向普通函数时，，使用 `new.target` 指向该普通函数的引用。
 
 - 4. 箭头函数不适合的场景
 
-  - 对于需要使用 ``` object.method() ``` 方式调用的函数，使用普通函数。
+  - 对于需要使用 `object.method()` 方式调用的函数，使用普通函数。
 
-  - 挂载在原型 ``` prototype ``` 上的方法，使用箭头函数会导致运行时的执行上下文错误，用回传统的函数表达式。
+  - 挂载在原型 `prototype` 上的方法，使用箭头函数会导致运行时的执行上下文错误，用回传统的函数表达式。
 
-  - 当为一个 ``` DOM ``` 事件绑定回调函数后，触发回调函数时的 ``` this ```，需要指向当前发生事件的 ``` DOM ``` 节点，事件的回调需要用函数表达式代替箭头函数。
+  - 当为一个 `DOM` 事件绑定回调函数后，触发回调函数时的 `this`，需要指向当前发生事件的 `DOM` 节点，事件的回调需要用函数表达式代替箭头函数。
 
-  另外，在 react 中的事件回调
+  另外，在 `react` 中的事件回调
 
   ```javaScript
     // jsx render
@@ -168,6 +168,15 @@ function setTimeout(fn, delay) { // 等待delay毫秒
 
   - 构造函数：箭头函数不能通过 new 关键字调用。
 
+6.  `this`  优先级相关
+
+把通过 `call、apply、bind、new` 对  `this`  绑定的情况称为显式绑定；根据调用关系确定的  `this`  指向称为隐式绑定。
+
+`call、apply` 的显式绑定一般来说优先级比隐式绑定更高。
+
+`new` 绑定修改了 `bind` 绑定中的  `this` ，因此 `new` 绑定的优先级比显式 `bind` 绑定更高。
+
+new 绑定 > 显示绑定 > 隐式绑定 > 默认绑定
 
 ## 面试题
 
@@ -200,10 +209,93 @@ obj.method(fn, 1);
  * */ 
 ```
 
-6.  `this`  优先级相关
+```javaScript
+function foo(arg){
+    this.a = arg;
+    return this
+};
 
-把通过 `call、apply、bind、new` 对  `this`  绑定的情况称为显式绑定；根据调用关系确定的  `this`  指向称为隐式绑定。
+var a = foo(1);
+var b = foo(10);
 
-`call、apply` 的显式绑定一般来说优先级比隐式绑定更高。
+console.log(a.a);    // undefined
+console.log(b.a);    // 10
 
-`new` 绑定修改了 `bind` 绑定中的  `this` ，因此 `new` 绑定的优先级比显式 `bind` 绑定更高。
+/**
+ * foo(1)执行，应该不难看出是默认绑定吧 , this指向了window，函数里等价于 window.a = 1,return window;
+ * 
+ * var a = foo(1) 等价于 window.a = window , 很多人都忽略了var a 就是window.a ，将刚刚赋值的 1 替换掉了。
+ * 
+ * 所以这里的 a 的值是 window , a.a 也是window ， 即window.a = window ; window.a.a = window;
+ * 
+ * foo(10) 和第一次一样，都是默认绑定，这个时候，将window.a 赋值成 10 ，注意这里是关键，原来window.a = window ,现在被赋值成了10，变成了值类型，所以现在 a.a = undefined。(验证这一点只需要将var b = foo(10);删掉，这里的 a.a 还是window)
+ * 
+ * var b = foo(10); 等价于 window.b = window;
+ * 
+ * 本题中所有变量的值，a = window.a = 10 , a.a = undefined , b = window , b.a = window.a = 10;
+ * */ 
+```
+
+```javaScript
+function foo() {
+    // 这里的getName 将创建到全局window上
+    getName = function () { console.log (1); };
+    return this;
+}
+
+//这个getName和上面的不同，是直接添加到foo上的
+foo.getName = function () { console.log(2);};
+
+// 这个getName直接添加到foo的原型上，在用new创建新对象时将直接添加到新对象上 
+foo.prototype.getName = function () { console.log(3);};
+
+// 和foo函数里的getName一样, 将创建到全局window上
+var getName = function () { console.log(4);};
+
+/**
+ * 同上，但是这个函数不会被使用，因为函数声明的提升优先级最高，所以上面的函数表达式将永远替换
+ * 这个同名函数，除非在函数表达式赋值前去调用getName()，但是在本题中，函数调用都在函数表达式之后，所以这个函数可以忽略了
+ * */ 
+function getName () { console.log(5);}
+ 
+foo.getName ();                // 2
+
+getName ();                    // 4
+
+foo().getName ();              // 1
+/**
+ * 这里的foo函数执行完成了两件事
+ * 1. 将window.getName设置为1
+ * 2. 返回window , 故等价于 window.getName(); 输出 1
+ * */ 
+
+getName ();                    // 1
+/**
+ * 刚刚上面的函数刚把window.getName设置为1,故同上 输出 1
+ * */ 
+
+new foo.getName ();            // 2
+/**
+ * new 对一个函数进行构造调用 , 即 foo.getName ,构造调用也是调用
+ * 该执行还是执行，然后返回一个新对象，输出 2
+ * 创建的对象但是可以猜到，是一个函数名为 foo.getName 的对象
+ * 且 __proto__ 属性里有一个getName函数，是上面设置的 3 函数
+ * */ 
+
+new foo().getName ();          // 3
+/**
+ * new 是对一个函数进行构造调用,它直接找到了离它最近的函数,foo(),
+ * 并返回了应该新对象,等价于 var obj = new foo();
+ * obj.getName(); 这样就很清晰了,输出的是之前绑定到prototype上的那个getName  3 ,
+ * 因为使用new后会将函数的prototype继承给 新对象
+ * */ 
+
+new new foo().getName ();      // 3
+/**
+ * 来分解一下
+ * var obj = new foo();
+ * var obj1 = new obj.getName();
+ * obj 有getName 3, 即输出3
+ * obj 是一个函数名为 foo的对象,obj1是一个函数名为obj.getName的对象
+ * */ 
+```
