--- a/02. 语法和API/ES语法/05. 闭包.md
+++ b/02. 语法和API/ES语法/05. 闭包.md
@@ -195,3 +195,5 @@ function Person(){
     j.Say();
     alert(j.getName());
 ```
+
+[JavaScript深入之闭包](https://github.com/mqyqingfeng/Blog/issues/9)
