--- a/02. 语法和API/ES语法/06. 继承.md
+++ b/02. 语法和API/ES语法/06. 继承.md
@@ -426,3 +426,7 @@ function extend(subClass, superClass) {
 - ES6 继承是使用关键字先创建父类的实例对象 `this` ，最后在子类 `class` 中修改 `this` 。
 
 **需要注意的是， `class` 关键字只是原型的语法糖，JavaScript 继承仍然是基于原型实现的。**
+
+[JavaScript 深入之继承的多种方式和优缺点](https://github.com/mqyqingfeng/Blog/issues/16)
+
+[JS 类继承](https://zh.javascript.info/class-inheritance)
