--- a/02. 语法和API/JS Web API/01. DOM 操作.md
+++ b/02. 语法和API/JS Web API/01. DOM 操作.md
@@ -1,21 +1,212 @@
-1. DOM 的本质是 HTML 解析而成的一棵树
+## DOM
 
-2. DOM 操作
+`DOM`：`Document Object Model`，文档对象模型。`DOM` 为文档提供了结构化表示，并定义了如何通过脚本来访问文档结构。目的其实就是为了能让 `js` 操作 `html` 元素而制定的一个规范。
 
-  - 获取 DOM 节点
+`DOM` 就是由节点组成的。本质是 `HTML` 解析而成的一棵树。
 
-  - attribute：修改 DOM 节点的 HTML 标签属性，会改变 HTML 结构。getAttribute & setAttribute
+解析过程： `HTML` 加载完毕，渲染引擎会在内存中把 `HTML` 文档，生成一个 `DOM` 树。
 
-  - property：修改 DOM 节点的对象属性，不会体现到 HTML 结构中
+`DOM` 树：（一切都是节点）。整个 `HTML` 文档就是一个文档节点。所有的节点都是 `Object`。
 
-attribute 和 property 都有可能引起 DOM 的重新渲染，推荐使用 property。
+## `DOM` 元素节点的获取
 
-  - 创建/新增/插入/移动/删除节点
+1. 通过 `id` 获取元素 —— `document.getElementById`
 
-  - 获取子元素列表 & 获取父元素
+2. 通过类名（`ClassName`）获取元素 获得到的是一个集合 —— `document.getElementsByClassName`
 
-3. DOM 操作的性能考虑
+3. 通过标签获（`TagName`）取元素 获取的也是一组 —— `document.getElementsByTagName`
 
-  - 对 DOM 查询做缓存
+4. 通过`querySelector（css选择器）`但是只能获取一个元素（第一个）—— `document.querySelector`
 
-  - 将频繁操作改为一次性操作。文档片段：document.createDocumentFragment()
+5. `document.queryselectorAll(css选择器)`
+
+## `DOM` 访问关系的获取
+
+`DOM` 的节点并不是孤立的，因此可以通过 `DOM` 节点之间的相对关系对它们进行访问。
+
+1. 获取父节点
+
+调用者就是节点。一个节点只有一个父节点
+
+```javaScript
+节点.parentNode
+```
+
+2. 获取兄弟节点
+
+- 下一个节点 | 下一个元素节点
+
+```javaScript
+下一个兄弟节点 = 节点.nextElementSibling || 节点.nextSibling
+```
+
+- 前一个节点 | 前一个元素节点
+
+```javaScript
+前一个兄弟节点 = 节点.previousElementSibling || 节点.previousSibling
+```
+
+3. 获得任意一个兄弟节点
+
+```javaScript
+节点自己.parentNode.children[index];  //随意得到兄弟节点
+```
+
+4. 获取单个的子节点
+
+- 第一个子节点 | 第一个子元素节点
+
+```javaScript
+第一个子元素节点 = 节点.firstElementChild || 节点.firstChild
+```
+
+- 最后一个子节点 | 最后一个子元素节点
+
+```javaScript
+最后一个子元素节点 = 节点.lastElementChild || 节点.lastChild
+```
+
+5. 获取所有的子节点
+
+- `childNodes`：标准属性。返回的是指定元素的子节点的集合（包括元素节点、所有属性、文本节点）。是W3C的亲儿子。火狐 谷歌等高本版会把换行也看做是子节点。
+
+用法：
+
+```javaScript
+子节点数组 = 父节点.childNodes;   //获取所有节点。
+```
+
+- `children`：非标准属性。返回的是指定元素的子元素节点的集合。【重要】
+
+它只返回HTML节点，甚至不返回文本节点。
+
+在IE6/7/8中包含注释节点（在IE678中，注释节点不要写在里面）。
+
+虽然不是标准的DOM属性，但它和innerHTML方法一样，得到了几乎所有浏览器的支持。
+
+用法：（用的最多）
+
+```javaScript
+子节点数组 = 父节点.children;   //获取所有节点。用的最多。
+```
+
+
+
+
+
+## `DOM` 节点的操作
+
+1. 创建节点
+
+```javaScript
+新的标签(元素节点) = document.createElement("标签名");
+```
+
+2. 插入节点
+
+- 父节点的最后插入一个新的子节点
+
+```javaScript
+父节点.appendChild(新的子节点);
+```
+
+- 在参考节点前插入一个新的节点。如果参考节点为 `null`，那么将在父节点里面的最后插入一个子节点。
+
+```javaScript
+父节点.insertBefore(新的子节点,作为参考的子节点);
+```
+
+3. 删除节点
+
+- 用父节点删除子节点。必须要指定是删除哪个子节点。
+
+```javaScript
+父节点.removeChild(子节点);
+```
+
+- 如果想删除自己这个节点
+
+```javaScript
+node1.parentNode.removeChild(node1);
+```
+
+4. 复制节点（克隆节点）
+
+```javaScript
+要复制的节点.cloneNode(); //括号里不带参数和带参数false，效果是一样的。
+
+要复制的节点.cloneNode(true);
+```
+
+括号里带不带参数，效果是不同的。解释如下：
+
+- 不带参数/带参数false：只复制节点本身，不复制子节点。
+
+- 带参数true：既复制节点本身，也复制其所有的子节点。
+
+5. 移动节点
+
+## 设置节点的属性
+
+`attribute`：修改 `DOM` 节点的 `HTML` 标签属性，会改变 `HTML` 结构。`getAttribute` & `setAttribute`
+
+1. 获取节点的属性值
+
+```javaScript
+/**
+ * 方式一
+ * 注意，获取节点的类名是 class，不是 className
+ * */ 
+元素节点.属性名;
+元素节点[属性名];
+
+/**
+ * 方式2
+ * 注意，获取节点的类名是 class，不是 className
+ * */ 
+元素节点.getAttribute("属性名称");
+```
+
+方式1和方式2的区别在于：前者是直接操作标签，后者是把标签作为 `DOM` 节点。推荐方式2。
+
+2. 设置节点的属性值
+
+```javaScript
+/**
+ * 方式一
+ * 注意，获取节点的类名是 class，不是 className
+ * */ 
+元素节点.属性名 = 属性值;
+
+/**
+ * 方式2
+ * 注意，获取节点的类名是 class，不是 className
+ * */ 
+元素节点.setAttribute("属性名", "新的属性值");
+```
+
+3. 删除节点的属性
+
+```javaScript
+元素节点.removeAttribute(属性名);
+```
+
+4. 总结
+
+获取节点的属性值和设置节点的属性值，都有两种方式。
+
+如果是节点的“原始属性”（比如 普通标签的 `class/className` 属性、普通标签的 `style` 属性、普通标签的 `title` 属性、`img` 标签的 `src` 属性、超链接的 `href` 属性等），方式1和方式2是等价的，可以混用。
+
+但如果是节点的“非原始属性”，在使用这两种方式时，是有区别的。区别如下：
+
+- 方式1 的元素节点.属性和元素节点[属性]：绑定的属性值不会出现在标签上。`property`：修改 `DOM` 节点的对象属性，不会体现到 `HTML` 结构中
+
+- 方式2 的`get/set/removeAttribut`：绑定的属性值会出现在标签上。
+
+- 这两种方式不能交换使用，`get` 值和 `set` 值必须使用同一种方法。
+
+## `DOM` 操作的性能考虑
+
+1. 对 `DOM` 查询做缓存
+
+2. 将频繁操作改为一次性操作。文档片段：`document.createDocumentFragment()`
