--- a/02. 语法和API/JS Web API/02. BOM 操作.md
+++ b/02. 语法和API/JS Web API/02. BOM 操作.md
@@ -1,29 +1,131 @@
-1. navigator 浏览器
+## 常见的 `BOM` 对象
 
+`BOM` 可以让我们通过 `JS` 来操作浏览器。`BOM` 中为我们提供了一些对象，来完成对浏览器相关的操作。
+
+常见的 `BOM` 对象有：
+
+- `Window`：代表整个浏览器的窗口，同时 `window` 也是网页中的全局对象。
+
+- `Navigator`：代表当前浏览器的信息，通过该对象可以识别不同的浏览器。
+
+- `Location`：代表当前浏览器的地址栏信息，通过 `Location` 可以获取地址栏信息，或者操作浏览器跳转页面。
+
+- `History`：代表浏览器的历史记录，通过该对象可以操作浏览器的历史记录。由于隐私原因，该对象不能获取到具体的历史记录，只能操作浏览器向前或向后翻页，而且该操作只在当次访问时有效。
+
+- `Screen`：代表用户的屏幕信息，通过该对象可以获取用户的显示器的相关信息。
+
+备注：这些 `BOM` 对象都是作为 `window` 对象的属性保存的，可以通过 `window` 对象来使用，也可以直接使用。比如说，我可以使用 `window.location.href`，也可以直接使用 `location.href`，二者是等价的。之前学习过的 `document` 也是在 `window` 中保存的。`DOM` 也是 `BOM` 的一部分。
+
+## `Navigator` 和 `navigator.userAgent`
+
+1. `Navigator` 代表当前浏览器的信息，通过该对象可以识别不同的浏览器。
+
+一般我们只会使用 `navigator.userAgent` 来获取浏览器的信息。
+
+`userAgent` 的值是一个字符串，简称 `UA`，这个字符串中包含了用来描述浏览器信息的内容，不同的浏览器会有不同的 `userAgent`。
+
+```javaScript
 const ua = navigator.userAgent;
 
 const isChrome = ua.indexOf("Chrome");
 
+if (/firefox/i.test(ua)) {
+  console.log('是火狐浏览器');
+} else if (/chrome/i.test(ua)) {
+  console.log('是Chrome浏览器');
+} else if (/msie/i.test(ua)) {
+  console.log('是IE浏览器');
+} else if ('ActiveXObject' in window) {
+  console.log('是 IE11 浏览器');
+}
+```
 
-2. screen 屏幕
+2. 不同浏览器的 `userAgent`
 
+不同浏览器（包括微信内置的浏览器）的 `userAgent` 信息，是不一样的，我们可以根据 `navigator.userAgent` 属性来获取。
 
+- iOS 版微信浏览器 `Mozilla/5.0 (iPhone; CPU iPhone OS 9_3 like Mac OS X) AppleWebKit/601.1.46 (KHTML, like Gecko) Mobile/13E233 MicroMessenger/6.3.15 NetType/WIFI Language/zh_CN`
 
+- Android 版微信浏览器 `Mozilla/5.0 (Linux; Android 5.0.1; GT-I9502 Build/LRX22C; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/43.0.2357.121 Mobile Safari/537.36 MicroMessenger/6.1.0.78_r1129455.543 NetType/WIFI`
 
-3. location 地址
+- iOS 版本 QQ 浏览器 `Mozilla/5.0 (iPhone; CPU iPhone OS 11_2_2 like Mac OS X) AppleWebKit/604.4.7 (KHTML, like Gecko) Mobile/15C202 QQ/7.3.5.473 V1_IPH_SQ_7.3.5_1_APP_A Pixel/1125 Core/UIWebView Device/Apple(iPhone X) NetType/WIFI QBWebViewType/1`
 
+- Android 版 QQ 浏览器 `Mozilla/5.0 (Linux; Android 4.4.2; PE-TL20 Build/HuaweiPE-TL20; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/57.0.2987.132 MQQBrowser/6.2 TBS/043807 Mobile Safari/537.36 V1_AND_SQ_7.3.2_762_YYB_D QQ/7.3.2.3350 NetType/WIFI WebP/0.3.0 Pixel/1080`
 
+## `Screen` 屏幕
 
+## `Location` 对象
 
-4. history 前进后退
+`Location` 对象：封装了浏览器地址栏的 `URL` 信息。
 
-history.back(); // 后退
-history.forward(); // 前进
+1. `Location` 对象的属性
 
+```javaScript
+// 获取当前页面的 url 路径
+location.href;
 
+/**
+ * 设置 url 路径
+ * 如果直接将location.href属性修改为一个绝对路径（或相对路径）
+ * 则页面会自动跳转到该路径，并生成相应的历史记录。
+ * */
+location.href = 'https://xxx';
+```
 
-5. window
+2. `Location` 对象的方法
 
+```javaScript
+// 用来跳转到其他的页面，作用和直接修改location.href一样
+location.assign(str);
 
+/**
+ * 用于重新加载当前页面，作用和刷新按钮一样
+ * 在方法的参数中传递一个true，则会强制清空缓存刷新页面。
+ * */
+location.reload();
+
+/**
+ * 使用一个新的页面替换当前页面，调用完毕也会跳转页面。
+ * 但不会生成历史记录，不能使用「后退按钮」后退。
+ * */
+location.replace();
+```
+
+## `History` 对象
+
+`History` 对象：可以用来操作浏览器的向前或向后翻页。
+
+1. `History` 对象的属性
+
+```javaScript
+// 获取浏览器历史列表中的 url 数量。注意，只是统计当次的数量，如果浏览器关了，数量会重置为1。
+history.length;
+```
+
+2. `History` 对象的方法
+
+```javaScript
+// 用来回退到上一个页面，作用和浏览器的「回退按钮」一样
+history.back();
+
+// 用来跳转下一个页面，作用和浏览器的「前进按钮」一样
+history.forward();
+
+// 向前/向后跳转 n 个页面
+history.go( int n);  // 需要整数作为参数
+
+```
+
+## Window
+
+`window` 对象是 `BOM` 的顶层(核心)对象，所有对象都是通过它延伸出来的，也可以称为 `window` 的子对象。
+
+`window` 对象：
+
+- `window` 对象是 `JavaScript` 中的顶级对象。
+
+- 全局变量、自定义函数也是 `window` 对象的属性和方法。
+
+- `window` 对象下的属性和方法调用时，可以省略 `window`。
 
 
