--- a/02. 语法和API/JS Web API/03. 事件绑定.md
+++ b/02. 语法和API/JS Web API/03. 事件绑定.md
@@ -131,6 +131,24 @@ function bindEvent(elem, type, selector, fn) {
     }
   });
 }
-
-
 ```
+
+## 事件对象
+
+当事件的响应函数被触发时，会产生一个事件对象 `event`。浏览器每次都会将这个事件 `event` 作为实参传进之前的响应函数。
+
+这个对象中包含了与当前事件相关的一切信息。比如鼠标的坐标、键盘的哪个按键被按下、鼠标滚轮滚动的方向等。
+
+获取 `event` 对象（兼容性问题）
+
+所有浏览器都支持 `event` 对象，但支持的方式不同。
+
+- 普通浏览器的写法是 `event`
+
+- ie 678 的写法是 `window.event`。此时，事件对象 `event` 是作为 `window` 对象的属性保存的。
+
+```javaScript
+event = event || window.event; // 兼容性写法
+```
+
+
