--- a/02. 语法和API/JS Web API/05. 事件委托.md
+++ b/02. 语法和API/JS Web API/05. 事件委托.md
@@ -2,6 +2,8 @@
 
 定义：事件代理就是利用事件冒泡，只指定一个事件处理程序，就可以管理某一类型的所有事件。(`delegation`)。或者说把事件加到父元素或祖先元素上，触发执行效果。
 
+事件委托，通俗地来讲，就是把一个元素响应事件（click、keydown......）的函数委托到另一个元素。
+
 **优点：**
 
 - 节省内存
