--- a/02. 语法和API/JS Web API/06. Ajax.md
+++ b/02. 语法和API/JS Web API/06. Ajax.md
@@ -1,1 +1,73 @@
-[08. 常用工具和插件 - Axios从入门到源码分析]
+## 概念
+
+在浏览器中，可以在不刷新页面的情况下，通过 `Ajax` 的方式去获取一些新的内容。
+
+`Ajax`：`Asynchronous Javascript And XML`（异步 `JavaScript` 和 `XML`）。它并不是凭空出现的新技术，而是对于现有技术的结合。`Ajax` 的核心是 `js` 对象：`XMLHttpRequest`。
+
+## 原理
+
+其实也就是 使用 `XMLHttpRequest` 对象的五个步骤。
+
+1. 创建异步对象，即 `XMLHttpRequest` 对象。
+
+2. 使用 `open` 方法设置请求参数。`open(method, url, async)`。参数解释：请求的方法、请求的 `url`、是否异步。第三个参数如果不写，则默认为 `true`。
+
+3. 发送请求：`send()`。
+
+4. 注册事件：注册 `onreadystatechange` 事件，状态改变时就会调用。
+
+如果要在数据完整请求回来的时候才调用，我们需要手动写一些判断的逻辑。
+
+5. 服务端响应，获取返回的数据。
+
+## `XMLHttpRequest` 对象详解
+
+1. 发送请求
+
+```javaScript
+/**
+ * @param method：请求的类型；GET 或 POST
+ * @param url：文件在服务器上的位置
+ * @param async：true（异步）或 false（同步）
+ * */
+open(method, url, async);
+
+// 另外还有个方法：（仅用于 POST 请求）
+send(string);
+```
+
+2. `POST` 请求时注意
+
+如果想让 像 `form` 表单提交数据那样使用 `POST` 请求，就需要使用 `XMLHttpRequest` 对象的 `setRequestHeader()` 方法 来添加 `HTTP` 头。然后在 `send()` 方法中添加想要发送的数据：
+
+```javaScript
+xmlhttp.open('POST', 'ajax_test.php', true);
+
+xmlhttp.setRequestHeader('Content-type', 'application/x-www-form-urlencoded');
+
+xmlhttp.send('name=smyhvae&age=27');
+```
+
+3. `onreadystatechange` 事件
+
+注册 `onreadystatechange` 事件后，每当 `readyState` 属性改变时，就会调用 `onreadystatechange` 函数。
+
+在 `onreadystatechange` 事件中，当 `readyState` 等于 `4`，且状态码为 `200` 时，表示响应已就绪。
+
+`readyState`：（存有 `XMLHttpRequest` 的状态。从 `0` 到 `4` 发生变化）
+
+- 0: 请求未初始化
+
+- 1: 服务器连接已建立
+
+- 2: 请求已接收
+
+- 3: 请求处理中
+
+- 4: 请求已完成，且响应已就绪
+
+4. 服务器响应的内容
+
+`responseText`：获得字符串形式的响应数据。
+
+`responseXML`：获得 `XML` 形式的响应数据。
