--- a/06. 运行和监控/03. 安全.md
+++ b/06. 运行和监控/03. 安全.md
@@ -4,6 +4,8 @@
 
 [前端面试查漏补缺--(七) XSS攻击与CSRF攻击](https://juejin.cn/post/6844903781704925191)
 
+[一文读懂 Web 安全](https://segmentfault.com/a/1190000023396707)
+
 XSS
 
 CSRF
