--- a/07. 前端框架/01. 框架基础/02. 前端路由.md
+++ b/07. 前端框架/01. 框架基础/02. 前端路由.md
@@ -50,3 +50,9 @@ window.history.replaceState(null, null, path);
 | 美观性 | 带着 # 字符，较丑       | 简洁美观                         |
 | 兼容性 | >= ie 8，其它主流浏览器 | >= ie 10，其它主流浏览器         |
 | 实用性 | 不需要对服务端做改动    | 需要服务端对路由进行相应配合设置 |
+
+[hashchange](https://developer.mozilla.org/en-US/docs/Web/API/Window/hashchange_event)
+
+[history](https://developer.mozilla.org/en-US/docs/Web/API/History)
+
+[前端路由简介以及 vue-router 实现原理](https://zhuanlan.zhihu.com/p/37730038)
