--- a/02. 语法和API/CSS/03. 布局/02. 盒子模型.md
+++ b/02. 语法和API/CSS/03. 布局/02. 盒子模型.md
@@ -32,3 +32,6 @@ offsetWidth...
 
   - CSS3 属性 `box-sizing` ：`border-box` 或者 `content-box`
 
+[CSS 盒模型详解（图文教程）](https://www.cnblogs.com/qianguyihao/p/7256371.html)
+
+[CSS 盒模型之内边距、边框、外边距 十九问](https://juejin.cn/post/6880111680153059341)
