--- a/02. 语法和API/ES语法/00. 基础语法/10. apply、call、bind的区别与用法.md
+++ b/02. 语法和API/ES语法/00. 基础语法/10. apply、call、bind的区别与用法.md
@@ -1,14 +1,14 @@
-apply()、call()和 bind()方法都是 Function.prototype 对象中的方法，而所有的函数都是 Function 的实例。三者都可以改变 this 的指向，将函数绑定到上下文中。
+`apply()`、`call()`和 `bind()`方法都是 `Function.prototype` 对象中的方法，而所有的函数都是 `Function` 的实例。三者都可以改变 `this` 的指向，将函数绑定到上下文中。
 
 ## 语法
 
-1. Function.prototype.apply()
+1. `Function.prototype.apply()`
 
-func.apply(thisArg, [argsArray])
+`func.apply(thisArg, [argsArray])`
 
-apply 接受两个参数，第一个参数是 this 的指向，第二个参数是函数接受的参数，以数组的形式传入，且当第一个参数为 null、undefined 的时候，默认指向 window(在浏览器中)，使用 apply 方法改变 this 指向后原函数会立即执行，且此方法只是临时改变 thi 指向一次。
+`apply` 接受两个参数，第一个参数是 `this` 的指向，第二个参数是函数接受的参数，以数组的形式传入，且当第一个参数为 `null`、`undefined` 的时候，默认指向 `window`(在浏览器中)，使用 `apply` 方法改变 `this` 指向后原函数会立即执行，且此方法只是临时改变 `this` 指向一次。
 
-实现 apply 方法(面试题)：
+实现 `apply` 方法(面试题)：
 
 ```javaScript
 Function.prototype.apply = function (context) {
@@ -29,13 +29,13 @@ Function.prototype.apply = function (context) {
 }
 ```
 
-2. Function.prototype.call()
+2. `Function.prototype.call()`
 
-func.call(thisArg, arg1, arg2, ...)
+`func.call(thisArg, arg1, arg2, ...)`
 
-call 方法的第一个参数也是 this 的指向，后面传入的是一个参数列表（注意和 apply 传参的区别）。当一个参数为 null 或 undefined 的时候，表示指向 window（在浏览器中），和 apply 一样，call 也只是临时改变一次 this 指向，并立即执行。
+`call` 方法的第一个参数也是 `this` 的指向，后面传入的是一个参数列表（注意和 `apply` 传参的区别）。当一个参数为 `null` 或 `undefined` 的时候，表示指向 `window`（在浏览器中），和 `apply` 一样，`call` 也只是临时改变一次 `this` 指向，并立即执行。
 
-实现 call 方法(面试题)：
+实现 `call` 方法(面试题)：
 
 ```javaScript
 Function.prototype.call = function (context) {
@@ -52,11 +52,11 @@ Function.prototype.call = function (context) {
 }
 ```
 
-3. Function.prototype.bind()
+3. `Function.prototype.bind()`
 
-fun.bind(thisArg, 队列 or 数组)()
+`fun.bind(thisArg, 队列 or 数组)()`
 
-bind 方法和 call 很相似，第一参数也是 this 的指向，后面传入的也是一个参数列表(但是这个参数列表可以分多次传入，call 则必须一次性传入所有参数)，但是它改变 this 指向后不会立即执行，而是返回一个永久改变 this 指向的函数。
+`bind` 方法和 `call` 很相似，第一参数也是 `this` 的指向，后面传入的也是一个参数列表(但是这个参数列表可以分多次传入，`call` 则必须一次性传入所有参数)，但是它改变 `this` 指向后不会立即执行，而是返回一个永久改变 `this` 指向的函数。
 
 示例：
 
@@ -66,9 +66,9 @@ bind 方法和 call 很相似，第一参数也是 this 的指向，后面传入
   console.log(max(arr[4])); //12，分两次传参
 ```
 
-可以看出，bind 方法可以分多次传参，最后函数运行时会把所有参数连接起来一起放入函数运行。
+可以看出，`bind` 方法可以分多次传参，最后函数运行时会把所有参数连接起来一起放入函数运行。
 
-实现 bind 方法(面试题)：
+实现 `bind` 方法(面试题)：
 
 ```javaScript
 // 简易版
@@ -412,3 +412,9 @@ fooOBJ.call( obj3 ); // name: obj3 <---- 看！！！
 setTimeout( obj2.foo, 10 ); // name: obj
 
 ```
+
+[JS 中的 call、apply、bind 方法详解](https://segmentfault.com/a/1190000018270750)
+
+[JavaScript深入之call和apply的模拟实现](https://github.com/mqyqingfeng/Blog/issues/11)
+
+[JavaScript深入之bind的模拟实现](https://github.com/mqyqingfeng/Blog/issues/12)
