--- a/02. 语法和API/ES语法/00. 基础语法/函数/函数柯里化.md
+++ b/02. 语法和API/ES语法/00. 基础语法/函数/函数柯里化.md
@@ -10,9 +10,9 @@
 
 一个简单的栗子：
 
-  - 如果传递两个参数，我们只需将它们相加并返回。
+- 如果传递两个参数，我们只需将它们相加并返回。
 
-  - 否则，我们假设它是以sum(2)(3)的形式被调用的，所以我们返回一个匿名函数，它将传递给sum()（在本例中为2）的参数和传递给匿名函数的参数（在本例中为3）
+- 否则，我们假设它是以 sum(2)(3)的形式被调用的，所以我们返回一个匿名函数，它将传递给 sum()（在本例中为 2）的参数和传递给匿名函数的参数（在本例中为 3）
 
 ```javaScript
 var sum = function(x) {
@@ -30,7 +30,6 @@ var addTen = sum(10)
 increment(2) // 3
 addTen(2) // 12
 ```
-
 
 ## 柯里化的实现
 
@@ -57,17 +56,17 @@ function curry (fn, currArgs) {
 }
 ```
 
-解析一下 ``` curry ``` 函数的写法：
+解析一下 `curry` 函数的写法：
 
-首先，``` curry ``` 有 2 个参数，``` fn ``` 指的就是本文一开始的源处理函数 ``` sum ```。``` currArgs ``` 是调用 ``` curry ``` 时传入的参数列表，比如 (1, 2)(3) 这样的。
+首先，`curry` 有 2 个参数，`fn` 指的就是本文一开始的源处理函数 `sum`。`currArgs` 是调用 `curry` 时传入的参数列表，比如 (1, 2)(3) 这样的。
 
-再看到 ``` curry ``` 函数内部，它会整个返回一个匿名函数。
+再看到 `curry` 函数内部，它会整个返回一个匿名函数。
 
-再接下来的 ``` let args = [].slice.call(arguments) ```是将 ``` arguments ``` 数组化以便于使用数组的原生方法了。
+再接下来的 `let args = [].slice.call(arguments)`是将 `arguments` 数组化以便于使用数组的原生方法了。
 
-``` currArgs !== undefined ``` 的判断，是为了解决递归调用时的参数拼接。
+`currArgs !== undefined` 的判断，是为了解决递归调用时的参数拼接。
 
-最后，判断 ``` args ``` 的个数，是否与 ``` fn ``` (也就是 ``` sum ``` )的参数个数相等，相等了就可以把参数都传给 ``` fn ```，进行输出；否则，继续递归调用，直到两者相等。
+最后，判断 `args` 的个数，是否与 `fn` (也就是 `sum` )的参数个数相等，相等了就可以把参数都传给 `fn`，进行输出；否则，继续递归调用，直到两者相等。
 
 测试调用：
 
@@ -83,9 +82,6 @@ fn(1, 2)(3); // 6
 fn(1)(2, 3); // 6
 fn(1)(2)(3); // 6
 ```
-
-
-
 
 ## 作用
 
@@ -131,11 +127,11 @@ const addEvent = (function(){
 })()
 ```
 
-初始 ``` addEvent ``` 的执行其实值实现了部分的应用（只有一次的 if...else 判定），而剩余的参数应用都是其「返回的函数」实现的，典型的柯里化。
+初始 `addEvent` 的执行其实值实现了部分的应用（只有一次的 if...else 判定），而剩余的参数应用都是其「返回的函数」实现的，典型的柯里化。
 
 3. 延迟计算 / 运行
 
-ES5 中的 ``` bind ``` 方法，用来改变 ``` Function ``` 执行时候的上下文（函数主体本身不执行，与 ``` call/apply ``` 直接执行并改变不同），本质上就是延迟执行。
+ES5 中的 `bind` 方法，用来改变 `Function` 执行时候的上下文（函数主体本身不执行，与 `call/apply` 直接执行并改变不同），本质上就是延迟执行。
 
 4. 减少代码冗余，以及增加代码的可读性。
 
@@ -155,11 +151,11 @@ const ages = persons.map(getProp('age')); // [4, 5]
 const names = persons.map(getProp('name')); // ['kevin', 'bob']
 ```
 
-在实际的业务中，常常会遇到类似的对象列表数据。用 ``` getProp ``` 就可以很方便地，取出列表中某个 ``` key ``` 对应的所有值。
+在实际的业务中，常常会遇到类似的对象列表数据。用 `getProp` 就可以很方便地，取出列表中某个 `key` 对应的所有值。
 
-需要注意的是，``` const names = persons.map(getProp('name')); ``` 执行这条语句时 ``` getProp ``` 的参数只有一个``` name ```，而定义 ``` getProp ``` 方法时，传入 ``` curry ``` 的参数有2个，``` obj ```和``` index ```（这里必须写 2 个及以上的参数）。
+需要注意的是，`const names = persons.map(getProp('name'));` 执行这条语句时 `getProp` 的参数只有一个`name`，而定义 `getProp` 方法时，传入 `curry` 的参数有 2 个，`obj`和`index`（这里必须写 2 个及以上的参数）。
 
-关键就在于 ``` arguments ``` 的隐式传参。
+关键就在于 `arguments` 的隐式传参。
 
 ```javaScript
 const getProp = curry(function (obj, index) {
@@ -234,8 +230,7 @@ console.log(fibonacci(100)); // 输出354224848179262000000
 console.log(fibonacci(100)); // 输出354224848179262000000
 ```
 
-代码中，第2次计算 fibonacci(100) 则只需要在内存中直接读取结果。
-
+代码中，第 2 次计算 fibonacci(100) 则只需要在内存中直接读取结果。
 
 ## 感受柯里化之美
 
@@ -251,7 +246,7 @@ function curry(fn) {
   }
 }
 
-/*************************************/ 
+/*************************************/
 
 var match = curry(function(what, str) {
   return str.match(what)
@@ -311,13 +306,12 @@ censored("Chocolate Rain")
 
 ```
 
-
 ## 实现 plus(1)(4)(2)(3) == 10
 
 ```javaScript
 function plus(x) {
   let arr = [x]
-  
+
   let func = (y) => {
     arr.push(y)
     return func
@@ -336,4 +330,8 @@ function plus(x) {
 
 哪怕输出是另一个函数，它也是纯函数。当然 curry 函数也允许一次传递多个参数，但这只是出于减少 () 的方便
 
+[柯里化（Currying）](https://zh.javascript.info/currying-partials)
 
+[JavaScript 专题之函数柯里化](https://github.com/mqyqingfeng/Blog/issues/42)
+
+[【译】理解JavaScript中的柯里化](https://www.cnblogs.com/GeniusLyzh/p/9937829.html)
