--- a/02. 语法和API/ES语法/模块化.md
+++ b/02. 语法和API/ES语法/模块化.md
@@ -1,3 +1,5 @@
+[【深度全面】前端 JavaScript 模块化规范进化论](https://segmentfault.com/a/1190000023711059)
+
 [Module 的语法](https://es6.ruanyifeng.com/#docs/module)
 
 [Module 的加载实现](https://es6.ruanyifeng.com/#docs/module-loader)
@@ -7,3 +9,5 @@
 [精读《图解 ES 模块》](https://github.com/ascoders/weekly/blob/master/%E5%89%8D%E6%B2%BF%E6%8A%80%E6%9C%AF/52.%E7%B2%BE%E8%AF%BB%E3%80%8A%E5%9B%BE%E8%A7%A3%20ES%20%E6%A8%A1%E5%9D%97%E3%80%8B.md)
 
 [精读《js 模块化发展》](https://github.com/ascoders/weekly/blob/master/%E5%89%8D%E6%B2%BF%E6%8A%80%E6%9C%AF/1.%E7%B2%BE%E8%AF%BB%E3%80%8Ajs%20%E6%A8%A1%E5%9D%97%E5%8C%96%E5%8F%91%E5%B1%95%E3%80%8B.md)
+
+[【翻译】ES modules：通过漫画进行深入理解](https://juejin.cn/post/6844903591979778061)
