--- a/02. 语法和API/JS Web API/04. 事件机制.md
+++ b/02. 语法和API/JS Web API/04. 事件机制.md
@@ -23,7 +23,31 @@
 
 **事件捕获（event capturing）**： 通俗的理解就是，当鼠标点击或者触发dom事件时，浏览器会从根节点开始由外到内进行事件传播，即点击了子元素，如果父元素通过事件捕获方式注册了对应的事件的话，会先触发父元素绑定的事件。
 
+捕获阶段，事件依次传递的顺序是：window --> document --> html--> body --> 父元素、子元素、目标元素。
+
 **事件冒泡（dubbed bubbling）**： 与事件捕获恰恰相反，事件冒泡顺序是由内到外进行事件传播，直到根节点。无论是事件捕获还是事件冒泡，它们都有一个共同的行为，就是事件传播，它就像一跟引线，只有通过引线才能将绑在引线上的鞭炮（事件监听器）引爆， 试想一下，如果引线不导火了，那鞭炮就只有一响了！！！
+
+通俗来讲，冒泡指的是：子元素的事件被触发时，父元素的同样的事件也会被触发。取消冒泡就是取消这种机制。
+
+冒泡顺序：
+
+- 一般的浏览器: （除IE6.0之外的浏览器）
+
+div -> body -> html -> document -> window
+
+- IE6.0：
+
+div -> body -> html -> document
+
+以下事件不冒泡：blur、focus、load、unload、onmouseenter、onmouseleave。意思是，事件不会往父元素那里传递。
+
+我们检查一个元素是否会冒泡，可以通过事件的以下参数：
+
+```javaScript
+event.bubbles
+```    
+
+如果返回值为true，说明该事件会冒泡；反之则相反。
 
 事件冒泡和事件捕获很好理解，只不过是对同一件事情的不同看法，只不过这2种看法都很有道理。
 
@@ -70,6 +94,12 @@ IE9+/FF/Chrome这2种模型都支持，可以通过addEventListener((type, liste
 ### DOM事件流
 
 **DOM事件流（event flow ）存在三个阶段：事件捕获阶段、处于目标阶段、事件冒泡阶段。先调用捕获阶段的处理函数，其次调用目标阶段的处理函数，最后调用冒泡阶段的处理函数。**
+
+- 事件捕获阶段：事件从祖先元素往子元素查找（DOM树结构），直到捕获到事件目标 `target`。在这个过程中，默认情况下，事件相应的监听函数是不会被触发的。
+
+- 事件目标：当到达目标元素之后，执行目标元素该事件相应的处理函数。如果没有绑定监听函数，那就不执行。
+
+- 事件冒泡阶段：事件从事件目标 `target` 开始，从子元素往冒泡祖先元素冒泡，直到页面的最上一级标签。
 
 ```html
 <script>
