--- a/03. 网络和通讯/04. http/06. 浏览器缓存机制详解.md
+++ b/03. 网络和通讯/04. http/06. 浏览器缓存机制详解.md
@@ -166,3 +166,5 @@ cond4(no)->op6->e
 
 
 [参考资料](https://www.cnblogs.com/slly/p/6732749.html)
+
+[彻底理解浏览器的缓存机制](https://juejin.cn/post/6844903593275817998)
