--- a/06. 运行和监控/02. 性能优化.md
+++ b/06. 运行和监控/02. 性能优化.md
@@ -76,4 +76,15 @@
 
 - `repeat view` 二次访问
 
+
+[前端性能优化 24 条建议（2020）](https://juejin.cn/post/6892994632968306702)
+
+[前端性能优化之旅](https://github.com/alienzhou/fe-performance-journey)
+
+[还在看那些老掉牙的性能优化文章么？这些最新性能指标了解下](https://juejin.cn/post/6850037270729359367)
+
+[做性能优化时，我们关注哪些指标？](https://mp.weixin.qq.com/s/SlS0J9eSb20PCLW062sQVg)
+
+[前端搞工程化：从零打造性能检测库「源码 + 视频」](https://juejin.cn/post/6919295789630455815)
+
 [精读《2017 前端性能优化备忘录》](https://zhuanlan.zhihu.com/p/30349982)
