--- a/07. 前端框架/01. 框架基础/04. 虚拟 DOM 和 diff 算法.md
+++ b/07. 前端框架/01. 框架基础/04. 虚拟 DOM 和 diff 算法.md
@@ -2,6 +2,36 @@
 
 `Virtual dom`, 即虚拟 `DOM` 节点。它通过 `JS` 的 `Object` 对象模拟 `DOM` 中的节点，然后再通过特定的 `render` 方法将其渲染成真实的 `DOM` 节点。
 
+## 创建 Virtual Dom
+
+```javaScript
+function createElement(tagName, props, ...children) {
+  return {
+    tagName, 
+    props,
+    children,
+  }
+}
+// vnode { tagName: 'div', props: { className: 'one' }, children: [{tagName: 'li', props: { className: 'kk', children: [...] }}, children: [{tagName: 'li', props: { className: 'zz', children: ['kkk'] }}] }
+const vnode = createElement('div', {className: 'one'}, 
+  createElement('li', {className: 'kk'}, 
+    createElement('span', {className: 'txt'}, 'kkk'),
+    createElement('li', {className: 'zz'}, 'kkk')
+  ),
+  createElement('li', {className: 'one'}, 'one')
+)
+```
+
+[JSX 仅仅只是 React.createElement(component, props, ...children) 函数的语法糖](https://reactjs.org/docs/jsx-in-depth.html)
+
+## Diff 遍历算法
+
+
+
+[Virtual Dom 和 Diff 算法在 React 中是如何工作的？](https://medium.com/@gethylgeorge/how-virtual-dom-and-diffing-works-in-react-6fc805f9f84e)需自备梯子
+
+[React 核心知识点 -- Virtual Dom 与 Diff](https://github.com/pfan123/Articles/issues/62)
+
 [精读《DOM diff 原理详解》](https://github.com/ascoders/weekly/blob/master/%E5%89%8D%E6%B2%BF%E6%8A%80%E6%9C%AF/190.%E7%B2%BE%E8%AF%BB%E3%80%8ADOM%20diff%20%E5%8E%9F%E7%90%86%E8%AF%A6%E8%A7%A3%E3%80%8B.md)
 
 [精读《DOM diff 最长上升子序列》](https://github.com/ascoders/weekly/blob/master/%E5%89%8D%E6%B2%BF%E6%8A%80%E6%9C%AF/192.%E7%B2%BE%E8%AF%BB%E3%80%8ADOM%20diff%20%E6%9C%80%E9%95%BF%E4%B8%8A%E5%8D%87%E5%AD%90%E5%BA%8F%E5%88%97%E3%80%8B.md)
