--- a/02. 语法和API/CSS/03. 布局/07. Grid.md
+++ b/02. 语法和API/CSS/03. 布局/07. Grid.md
@@ -1,9 +1,10 @@
-Grid 网格是一种用于 web 的二维布局系统。利用系统，可以把内容按照行与列的格式进行排版。另外，网格还可以非常轻松的实现一些复杂的布局。  
+`Grid` 网格是一种用于 web 的二维布局系统。利用网格，可以把内容按照行与列的格式进行排版。另外，网格还可以非常轻松的实现一些复杂的布局。
+
+## `Grid` 容器
 
 ![](./images/定义网格及fr单位-0001.png)
 
-
-
+[grid-MDN](https://developer.mozilla.org/zh-CN/docs/Web/CSS/grid)
 
 [最强大的 CSS 布局 —— Grid 布局](https://juejin.cn/post/6854573220306255880)
 
