--- a/02. 语法和API/CSS/06. 移动端适配布局/01. 移动端rem布局原理解析.md
+++ b/02. 语法和API/CSS/06. 移动端适配布局/01. 移动端rem布局原理解析.md
@@ -1,1 +1,11 @@
 [大前端学习笔记整理【五】rem与px换算的计算方式](https://www.cnblogs.com/azhai-biubiubiu/p/6003597.html)
+
+
+rem/em/px
+
+vw/vh
+
+
+响应式布局常用方案
+
+media-query，根据不同的屏幕宽度设置根元素 font-size rem
