--- a/02. 语法和API/ES语法/09. 异步编程/05. 宏任务和微任务.md
+++ b/02. 语法和API/ES语法/09. 异步编程/05. 宏任务和微任务.md
@@ -25,7 +25,7 @@ setTimeout/setIntervalrequestAnimationFrame >
 在 `JavaScript` 中，任务被分为两种，一种宏任务（MacroTask）也叫 `Task`，一种叫微任务（MicroTask）。在 ES6 `规范中，microtask` 称为 ` jobs``，macrotask ` 称为 `task`。
 
 1. `MacroTask`（宏任务）
-   `script` 全部代码、`setTimeout`、`setInterval`、`setImmediate`（浏览器暂时不支持，只有 IE10 支持，具体可见 MDN）、`I/O(ajax)`、`UI Rendering`。
+   `script` 全部代码、`setTimeout`、`setInterval`、`setImmediate`（浏览器暂时不支持，只有 IE10 支持，具体可见 MDN）、`I/O(ajax)` （网络请求完成、文件读写完成事件）、`UI Rendering` 渲染事件（比如解析 DOM、计算布局、绘制）和用户交互事件（比如鼠标点击、滚动页面、放大缩小等）。
 
 2. `MicroTask`（微任务）
    `Promise`、`async/await`、`Process.nextTick`（Node 独有）、`Object.observe`(废弃)、`MutationObserver`
@@ -47,3 +47,5 @@ setTimeout/setIntervalrequestAnimationFrame >
 - 必要的话渲染 UI
 
 - 然后开始下一轮 `Event loop`，执行宏任务中的异步代码
+
+![EventLoop 运转流程效果图](../images/Cgp9HWBQhFyAf7TxAAK_oyhU5eM671.png)
