--- a/02. 语法和API/HTML/02. “看不见”的 HTML 标签.md
+++ b/02. 语法和API/HTML/02. “看不见”的 HTML 标签.md
@@ -74,9 +74,9 @@ const inerval = setInterval(() => {
 
 为了减少这些时间损耗，可以借助 `script` 标签的 3 个属性来实现。
 
-- `async` 属性。立即请求文件，但不阻塞渲染引擎，而是文件加载完毕后阻塞渲染引擎并立即执行文件内容。
+- `async` 属性。立即请求文件，但不阻塞渲染引擎，而是文件异步加载完毕后阻塞渲染引擎并立即执行文件内容。不确保执行顺序，一定在 `onload` 前，但不确定在 `DOMContentLoaded` 事件的前或后。
 
-- `defer` 属性。立即请求文件，但不阻塞渲染引擎，等到解析完 `HTML` 之后再执行文件内容。
+- `defer` 属性。立即请求文件，但不阻塞渲染引擎，等到解析完 `HTML` 之后再延迟执行文件内容，在浏览器看起来的效果像是将脚本放在了 `body` 后面一样（虽然按规范应该是在 `DOMContentLoaded` 事件前，但实际上不同浏览器的优化效果不一样，也有可能在它后面）。
 
 - `HTML5` 标准 `type` 属性，对应值为“`module`”。让浏览器按照 `ECMA Script 6` 标准将文件当作模块进行解析，默认阻塞效果同 `defer`，也可以配合 `async` 在请求完成后立即执行。
 
