--- a/06. 运行和监控/01. 页面加载和渲染/02. 浏览器渲染机制.md
+++ b/06. 运行和监控/01. 页面加载和渲染/02. 浏览器渲染机制.md
@@ -149,6 +149,38 @@ DocumentType           HTMLHtmlElement
 
 ![](../images/CgqCHl7OM-CAQGiGAAFv6uHi6MI573.png)
 
+> Bytes → characters → tokens → nodes → DOM
+
+![](../images/html-dom.png)
+
+**资源外链的下载**
+
+实际上，在解析 `html` 时，会遇到一些资源连接，此时就需要进行单独处理了。简单起见，这里将遇到的静态资源分为一下几大类（未列举所有）：
+
+1. 遇到外链时的处理
+
+当遇到外链时，会单独开启一个下载线程去下载资源（http1.1 中是每一个资源的下载都要开启一个 http 请求，对应一个 tcp/ip 链接）
+
+2. 遇到 `CSS` 样式资源
+
+- `CSS` 下载时异步，不会阻塞浏览器构建 `DOMTree`
+
+- 但是会阻塞渲染，也就是在构建 `TrnderTree` 时，会等到 `CSS` 下载解析完毕后才进行（这点与浏览器优化有关，防止 `CSS` 规则不断改变，避免了重复的构建）
+
+- 例外，`media query `声明的 `CSS` 是不会阻塞渲染的
+
+3. 遇到 `JS` 脚本资源
+
+- 阻塞浏览器的解析，也就是说发现一个外链脚本时，需等待脚本下载完成并执行后才会继续解析 `HTML`
+
+- 浏览器的优化，一般现代浏览器有优化，在脚本阻塞时，也会继续下载其它资源（当然有并发上限），但是虽然脚本可以并行下载，解析过程仍然是阻塞的，也就是说必须这个脚本执行完毕后才会接下来的解析，并行下载只是一种优化而已
+
+- `defer` 与 `async`，普通的脚本是会阻塞浏览器解析的，但是可以加上 `defer` 或 `async` 属性，这样脚本就变成异步了，可以等到解析完毕后再执行。注意，`defer` 是延迟执行，而 as`ync 是异步执行。
+
+4. 遇到 `img` 图片类资源
+
+遇到图片等资源时，直接就是异步下载，不会阻塞解析，下载完毕后直接用图片替换原有 `src` 的地方。
+
 ### 5. 构建 `CSSOM` 树 (CSS Rule Tree)
 
 渲染引擎除了解析 `HTML` 之外，也需要解析 `CSS`。
@@ -175,11 +207,30 @@ img {
 }
 ```
 
-对于上面的代码，会解析生成类似下面结构的 DOM 树：
+对于上面的代码，会解析生成类似下面结构的 `CSSOM` 树：
 
 ![](../images/Ciqc1F7OM-mAO8T2AAGu2Fxum4w061.png)
 
-需要注意的是，上图中的 CSSOM 树并不完整，完整的 CSSOM 树还应当包括浏览器提供的默认样式（也称为“User Agent 样式”）。
+需要注意的是，上图中的 `CSSOM` 树并不完整，完整的 `CSSOM` 树还应当包括浏览器提供的默认样式（也称为“User Agent 样式”）。
+
+**`CSS` 加载是否会阻塞 `DOMTree` 渲染？**
+
+这里说的是头部引入 `CSS` 的情况
+
+首先，我们都知道：`CSS` 是由单独的下载线程异步下载的。
+
+然后再说下几个现象：
+
+- `CSS` 加载不会阻塞 `DOMTree` 解析（异步加载时 `DOM` 照常构建）
+
+- 但会阻塞 `RenderTree` 渲染（渲染时需等 `CSS` 加载完毕，因为 `RenderTree` 需要 `CSS` 信息）
+
+这可能也是浏览器的一种优化机制。
+
+因为加载 `CSS` 的时候，可能会修改下面 `DOM` 节点的样式，如果 `CSS` 加载不阻塞 `RenderTree` 渲染的话，那么当 `CSS` 加载完之后，`RenderTree` 树可能又得重新重绘或者回流了，这就造成了一些没有必要的损耗。
+
+所以干脆就先把 `DOMTree` 的结构先解析完，把可以做的工作做完，然后等 `CSS` 加载完之后，
+在根据最终的样式来渲染 `RenderTree`，这种做法性能方面确实会比较好一点。
 
 ## 从 `DOM` 到渲染
 
@@ -197,13 +248,23 @@ img {
 
 对于上面的 `HTML` 和 `CSS` 代码，最终生成的渲染树就只有一个 `body` 节点，样式为 `font-size:12px`。
 
+![](../images/renderTree.png)
+
 ### 7. 布局 (layout)
 
 生成了渲染树之后，就可以进入布局阶段了，布局就是计算元素的大小及位置。
 
-计算元素布局是一个比较复杂的操作，因为需要考虑的因素有很多，包括字体大小、换行位置等，这些因素会影响段落的大小和形状，进而影响下一个段落的位置。
+计算元素布局是一个比较复杂的操作，因为需要考虑重新布局（Layout）或渲染（Repaint）的因素，包括字体大小、换行位置等，这些因素会影响段落的大小和形状，进而影响下一个段落的位置。
 
 布局完成后会输出对应的“盒模型”，它会精确地捕获每个元素的确切位置和大小，将所有相对值都转换为屏幕上的绝对像素。
+
+这里 Layout 和 Repaint 的概念是有区别的：
+
+- Layout，也称为 Reflow，即回流。一般意味着元素的内容、结构、位置或尺寸发生了变化，需要重新计算样式和渲染树。
+
+- Repaint，即重绘。意味着元素发生的改变只是影响了元素的一些外观之类的时候（例如，背景色，边框颜色，文字颜色等），此时只需要应用新样式绘制这个元素就可以了。
+
+回流的成本开销要高于重绘，而且一个节点的回流往往回导致子节点以及同级节点的回流， 所以优化方案中一般都包括，尽量避免回流。
 
 ### 8. 绘制 (Painting) 和合成 (Composite)
 
@@ -213,27 +274,20 @@ img {
 
 在得到布局树这份“施工图”之后，渲染引擎并不能立即绘制，因为还不知道绘制顺序，如果没有弄清楚绘制顺序，那么很可能会导致页面被错误地渲染。
 
-例如，对于使用 z-index 属性的元素（如遮罩层）如果未按照正确的顺序绘制，则将导致渲染结果和预期不符（失去遮罩作用）。
+例如，对于使用 `z-index` 属性的元素（如遮罩层）如果未按照正确的顺序绘制，则将导致渲染结果和预期不符（失去遮罩作用）。
 
 所以绘制过程中的第一步就是遍历布局树，生成绘制记录，然后渲染引擎会根据绘制记录去绘制相应的内容。
 
-对于无动画效果的情况，只需要考虑空间维度，生成不同的图层，然后再把这些图层进行合成，最终成为我们看到的页面。当然这个绘制过程并不是静态不变的，会随着页面滚动不断合成新的图形。
+对于无动画效果的情况，只需要考虑空间维度，生成不同的图层，浏览器会将各层的信息发送给 GPU，GPU 然后再把这些图层进行合成，显示在屏幕上最终成为我们看到的页面。当然这个绘制过程并不是静态不变的，会随着页面滚动不断合成新的图形。
 
-### 图层
+![](../images/render.jpeg)
 
-一般来说，可以把普通文档流看成一个图层。特定的属性可以生成一个新的图层。不同的图层渲染互不影响，所以对于某些频繁需要渲染的建议单独生成一个新图层，提高性能。但也不能生成过多的图层，会引起反作用。
-
-通过以下几个常用属性可以生成新图层
-
-- 3D 变换：translate3d、translateZ
-- will-change
-- video、iframe 标签
-- 通过动画实现的 opacity 动画转换
-- position: fixed
-
-复合线程会将页面拆分图层进行绘制再进行复合。
+渲染完毕后就是 `load` 事件了，之后就是自己的 JS 逻辑处理了。
 
 ### Load 和 DOMContentLoaded 区别
 
-- Load 事件触发代表页面中的 DOM，CSS，JS，图片已经全部加载完毕。
-- DOMContentLoaded 事件触发代表初始的 HTML 被完全加载和解析，不需要等待 CSS，JS，图片加载。
+- `DOMContentLoaded` 事件触发代表初始的 `HTML` 被完全加载和解析成 `DOM`，不需要等待 `CSS`，图片加载。(譬如如果有 async 加载的脚本就不一定完成)
+
+- `onload` 事件触发代表页面中的 `DOM`，`CSS`，`JS`，图片已经全部加载完毕。（渲染完毕了）
+
+- 执行顺序是：`DOMContentLoaded` -> `Load`
