--- a/07. 前端框架/01. 框架基础/04. 虚拟 DOM 和 diff 算法.md
+++ b/07. 前端框架/01. 框架基础/04. 虚拟 DOM 和 diff 算法.md
@@ -2,19 +2,19 @@
 
 `Virtual dom`, 即虚拟 `DOM` 节点。它通过 `JS` 的 `Object` 对象模拟 `DOM` 中的节点，然后再通过特定的 `render` 方法将其渲染成真实的 `DOM` 节点。
 
-## 创建 Virtual Dom
+### 创建 Virtual Dom
 
 ```javaScript
 function createElement(tagName, props, ...children) {
   return {
-    tagName, 
+    tagName,
     props,
     children,
   }
 }
 // vnode { tagName: 'div', props: { className: 'one' }, children: [{tagName: 'li', props: { className: 'kk', children: [...] }}, children: [{tagName: 'li', props: { className: 'zz', children: ['kkk'] }}] }
-const vnode = createElement('div', {className: 'one'}, 
-  createElement('li', {className: 'kk'}, 
+const vnode = createElement('div', {className: 'one'},
+  createElement('li', {className: 'kk'},
     createElement('span', {className: 'txt'}, 'kkk'),
     createElement('li', {className: 'zz'}, 'kkk')
   ),
@@ -24,9 +24,23 @@ const vnode = createElement('div', {className: 'one'},
 
 [JSX 仅仅只是 React.createElement(component, props, ...children) 函数的语法糖](https://reactjs.org/docs/jsx-in-depth.html)
 
+### 虚拟 `DOM` 是用来提升性能的吗？
+
+虚拟 `DOM` 的作用有以下两个。
+
+1. **优化性能** 。
+
+`DOM` 操作是比较耗时的，对于大量、频繁的 `DOM` 操作，如果先在 `JavaScript` 中模拟进行，然后再通过计算比对，找到真正需要更新的节点，这样就有可能减少不必要的 `DOM` 操作，从而提升渲染性能。
+
+但并不是所有的 `DOM` 操作都能通过虚拟 `DOM` 提升性能，比如单次删除某个节点，直接操作 `DOM` 肯定比虚拟 `DOM` 计算比对之后再删除要快。
+
+总体而言， **虚拟 `DOM` 提升了 `DOM` 操作的性能下限，降低了 `DOM` 操作的性能上限。** 所以会看到一些对渲染性能要求比较高的场景，比如在线文档、表格编辑，还是会使用原生 `DOM` 操作。
+
+2. 跨平台 。
+
+由于虚拟 `DOM` 以 `JavaScript` 对象为基础，所以可根据不同的运行环境进行代码转换（比如浏览器、服务端、原生应用等），这使得它具有了跨平台的能力。
+
 ## Diff 遍历算法
-
-
 
 [Virtual Dom 和 Diff 算法在 React 中是如何工作的？](https://medium.com/@gethylgeorge/how-virtual-dom-and-diffing-works-in-react-6fc805f9f84e)需自备梯子
 
