--- a/02. 语法和API/CSS/05. 响应式/响应式.md
+++ b/02. 语法和API/CSS/05. 响应式/响应式.md
@@ -1,9 +1,98 @@
-rem/em/px
+## 媒体查询语法详解
 
-vw/vh
+1. 媒体类型（Media types），描述设备的一般类别。
 
+- all： 适用于所有设备
 
-响应式布局常用方案
+- print：适用于在打印预览模式
 
-media-query，根据不同的屏幕宽度设置根元素 font-size rem
+- screen：主要用于屏幕
 
+- speech： 主要用于语音合成器
+
+2. 媒体特性（Media features），描述了 user agent、输出设备，或是浏览环境的具体特征。
+
+- width：viewport 的宽度
+
+- height： viewport 的高度
+
+- aspect- ratio：viewport 的宽高比
+
+- orientation：viewport 的旋转方向
+
+...
+
+3. 逻辑操作符 （logical operators），可用于联合构造复杂的媒体查询
+
+- and：用于将多个媒体查询规则组合成单条媒体查询
+
+- not：用于否定媒体查询，如果不满足这个条件则返回 true，否则返回 false。
+
+- only：用于旧版浏览器识别媒体类型使用
+
+- 逗号：用于将多个媒体查询合并为一个规则
+
+4. link 标签方式
+
+通过 media 属性设置媒体查询类型和媒体特性
+
+## 媒体查询的编写位置及顺序
+
+一般添加到样式表的底部，对 CSS 进行优先级覆盖。
+
+先适配移动端，再去适配 PC 端的适配原则： min-width 从小到大
+
+先适配 PC 端，再去适配移动端的适配原则： max-width 从大到小
+
+## 响应断点（阈值）的设定
+
+- Extra small < 576px
+
+- Small >= 576px, -sm
+
+- Medium >= 768px, -md
+
+- Large >= 992px, -lg
+
+- X-Large >= 1200px, -xl
+
+- XX-Large >= 1400px, -xxl
+
+## 响应式栅格系统
+
+## 响应式交互实现
+
+```html
+<style>
+  ul {
+    display: none;
+  }
+  input {
+    display: none;
+  }
+  input:checked + ul {
+    display: block;
+  }
+
+  @media (min-width: 700px) {
+    ul {
+      display: block;
+    }
+    span {
+      display: none;
+    }
+  }
+</style>
+<body>
+  <label for="menu">
+    <span> 菜单按钮 </span>
+  </label>
+  <input id="menu" type="checkbox" />
+  <ul>
+    <li>首页</li>
+    <li>教程</li>
+    <li>论坛</li>
+    <li>文章</li>
+  </ul>
+</body>
+```
