--- a/07. 前端框架/01. 框架基础/02. 前端路由.md
+++ b/07. 前端框架/01. 框架基础/02. 前端路由.md
@@ -1,6 +1,10 @@
-## 什么是前端路由
+## 前端路由
 
-为了解决单页面网站，通过切换浏览器地址路径，来匹配相对应的页面组件，前端路由应运而生。
+当浏览器地址栏中的 `URL` 发生变化时，会请求对应的网络资源，而负责响应这个网络资源的服务就称为路由。
+
+在早期的 `Web` 开发中，路由都是交由服务端处理，但随着前端技术的快速发展，路由模块逐渐转移交给了前端进行控制，而路由转移到前端，正是前后端分离和单页应用架构的基石。
+
+前端路由是在单页面应用网站中，通过切换浏览器地址路径，来匹配相对应的页面组件。这意味着 `Web` 应用的解耦，前后端真正分离，只通过 API 进行交互。
 
 ## 实现原理
 
@@ -12,23 +16,29 @@
 
 2. 可以监听到 `url` 的变化。
 
-## 两种实现
+根据浏览器提供的 API，有下面两种实现方案。
 
 ### Hash 模式
 
-早期的前端路由的实现就是基于 `location.hash` 来实现的。其实现原理也很简单，`location.hash` 的值就是 `URL` 中 `#` 后面的内容。
+早期的前端路由的实现就是基于 `location.hash` 来实现的。
 
 `hash` 存在下面几个特性：
 
-- `URL` 中 `hash` 值只是客户端的一种状态，也就是说当向服务器端发出请求时，`hash` 部分不会被发送。
+- `hash` 值是指 `URL` 中 `#` 号后面的内容，通过 `location.hash` 属性可以读写 `hash` 值，这个值可以让浏览器将页面滚动到 ID 与 `hash` 值相等的 `DOM` 元素位置，不会传给服务端。
+
+- `URL` 中 `hash` 值只是客户端的一种状态，`hash` 值的变化不会触发浏览器向服务器端发出请求。
 
 - `hash` 值的改变，都会在浏览器的访问历史中增加一个记录。因此可以通过浏览器的回退、前进按钮控制 `hash` 的切换。
 
-- 可以使用 `hashchange` 事件来监听 `hash` 的变化。
+- 可以使用 `window.hashchange` 事件来监听 `hash` 的变化。
+
+这种实现方式占用了 `hash` 值，导致默认的页面滚动行为失效，对于有滚动定位需求的情况需要自行手动获取元素的位置并调用 `BOM` 相关 API 进行滚动。
 
 ### History 模式
 
-`HTML5` 提供了 `History` API 来实现 `URL` 的变化。其中做最主要的 `API` 有以下两个：`history.pushState()` 和 `history.repalceState()`。这两个 `API` 可以在不进行刷新的情况下，操作浏览器的历史纪录。唯一不同的是，前者是新增一个历史记录，后者是直接替换当前的历史记录。
+`HTML5` 提供了 `History` API 来实现更规范的前端路由实现方式。
+
+`history` 提供了两个函数来修改 `URL`，即：`history.pushState()` 和 `history.repalceState()`。这两个 `API` 可以在不进行刷新的情况下，操作浏览器的历史纪录。唯一不同的是，前者是新增一个历史记录，后者是直接替换当前的历史记录。
 
 ```javaScript
 window.history.pushState(null, null, path);
@@ -39,17 +49,232 @@ window.history.replaceState(null, null, path);
 
 - `pushState` 和 `repalceState` 的标题（`title`）：一般浏览器会忽略，最好传入 `null`。
 
-- 可以使用 `popstate` 事件（每当同一个文档的浏览历史（即history对象）出现变化时触发）来监听 `url` 的变化。
+- 可以使用 `popstate` 事件（每当同一个文档的浏览历史（即 history 对象）出现变化时触发）来监听 `url` 的变化。
 
-- `history.pushState()` 或 `history.replaceState()` 不会触发 `popstate` 事件，只有用户点击浏览器倒退按钮和前进按钮，或者使用 JavaScript 调用back、forward、go方法时才会触发。
+- `history.pushState()` 或 `history.replaceState()` 不会触发 `window.popstate` 事件，只有用户点击浏览器倒退按钮和前进按钮，或者使用 `JavaScript` 调用 `back`、`forward`、`go` 方法时才会触发。
 
-## 两种路由模式的对比
+虽然能通过这种方式实现前端路由功能，但并不能拦截浏览器默认的请求行为，当用户修改地址栏网址时还是会向服务端发起请求，所以还需要服务端进行设置，将所有 `URL` 请求转向前端页面，交给前端进行解析。
 
-| 对比点 | Hash 模式               | History 模式                     |
-| ------ | ----------------------- | -------------------------------- |
-| 美观性 | 带着 # 字符，较丑       | 简洁美观                         |
-| 兼容性 | >= ie 8，其它主流浏览器 | >= ie 10，其它主流浏览器         |
-| 实用性 | 不需要对服务端做改动    | 需要服务端对路由进行相应配合设置 |
+下面是 `vue-router` 官网的 Nginx 配置例子：表示对于匹配的路径，按照指定顺序依次检查对应路径文件是否存在，对应路径目录是否存在，如果没有找到任何文件或目录，就返回 `index.html`。而 `index.html` 就会引入对应的 `JavaScript` 代码在浏览器端进行路由解析。
+
+```shell
+location / {
+  try_files $uri $uri/ /index.html;
+}
+```
+
+### 两种路由模式的对比
+
+| 对比点 | Hash 模式                      | History 模式                     |
+| ------ | ------------------------------ | -------------------------------- |
+| 美观性 | 带着 # 字符，加长 `URL` 字符串 | 简洁美观                         |
+| 兼容性 | >= ie 8，其它主流浏览器        | >= ie 10，其它主流浏览器         |
+| 实用性 | 不需要对服务端做改动           | 需要服务端对路由进行相应配合设置 |
+
+## 路由解析
+
+阻止浏览器在 `URL` 变化时向后端发送请求之后，就需要对路由进行解析了。 `vue-router` 和 `react-router` 都同时依赖了一个第三方库 [Path-to-RegExp](https://github.com/pillarjs/path-to-regexp) 进行路由解析，下面通过分析 [path-to-regexp 1.8](https://github.com/pillarjs/path-to-regexp/archive/v1.8.0.zip) 版本的源码来理解路由是如何被解析的。
+
+路由解析又分为两个操作：**路由匹配**和**路由生成**。
+
+### 路由匹配
+
+路由匹配就是当获取到请求路径后，如何找到对应的配置路径。在 path-to-regexp 源码中对应的是默认导出函数 `pathToRegexp()`。
+
+```javaScript
+/**
+* @param path 必传参数，值可以为自定义的请求路径，也可以是正则表达式，还可以是两者组成的数组；
+* @param keys 可选参数，值为数组，数组元素为解析正则表达式风格的字符串或冒号开头的占位符（下文简称为“特殊字符串”）生成的令牌
+                       比如字符串 /user/:id 对应的 keys 为 { name: 'id', delimiter: '/', optional: false, repeat: false } ，这个参数的值最终会被保存到返回的正则表达式对象的 keys 属性中，可用于后面的路由生成；
+* @param options 可选参数，执行过程中的配置信息，比如是否大小写敏感。
+* @return 一个带有 keys 属性的正则表达式，keys 属性值类型和 keys 参数相同，也是一个包含特殊字符串描述信息的数组。
+*/
+function pathToRegexp (path, keys, options) {
+  if (!isarray(keys)) {
+    options = /** @type {!Object} */ (keys || options)
+    keys = []
+  }
+  options = options || {}
+  if (path instanceof RegExp) {
+    return regexpToRegexp(path, /** @type {!Array} */ (keys))
+  }
+  if (isarray(path)) {
+    return arrayToRegexp(/** @type {!Array} */ (path), /** @type {!Array} */ (keys), options)
+  }
+  return stringToRegexp(/** @type {string} */ (path), /** @type {!Array} */ (keys), options)
+}
+```
+
+由于 `path` 参数可以是正则表达式、字符串、数组 3 种类型数据，所以在处理 `path` 参数的时候分别对应 3 个函数 `regexpToRegexp()`、`stringToRegexp()`、`arrayToRegexp()`。
+
+```javaScript
+function pathToRegexp (path, keys, options) {
+  if (!isarray(keys)) {
+    options = /** @type {!Object} */ (keys || options)
+    keys = []
+  }
+  options = options || {}
+  if (path instanceof RegExp) {
+    return regexpToRegexp(path, /** @type {!Array} */ (keys))
+  }
+  if (isarray(path)) {
+    return arrayToRegexp(/** @type {!Array} */ (path), /** @type {!Array} */ (keys), options)
+  }
+  return stringToRegexp(/** @type {string} */ (path), /** @type {!Array} */ (keys), options)
+}
+
+// arrayToRegexp() 函数会遍历 path 数组然后递归调用函数 pathToRegexp()
+// 将所得的结果拼接成一个新的正则表达式并赋值 keys 属性
+function arrayToRegexp (path, keys, options) {
+  var parts = []
+  for (var i = 0; i < path.length; i++) {
+    parts.push(pathToRegexp(path[i], keys, options).source)
+  }
+  var regexp = new RegExp('(?:' + parts.join('|') + ')', flags(options))
+  return attachKeys(regexp, keys)
+}
+
+// regexpToRegexp() 函数会找寻正则表达式中的负向后行断言
+// 记录到正则表达式实例的 keys 属性中
+function regexpToRegexp (path, keys) {
+  var groups = path.source.match(/\((?!\?)/g)
+  if (groups) {
+    for (var i = 0; i < groups.length; i++) {
+      keys.push({
+        name: i,
+        prefix: null,
+        delimiter: null,
+        optional: false,
+        repeat: false,
+        partial: false,
+        asterisk: false,
+        pattern: null
+      })
+    }
+  }
+  return attachKeys(path, keys)
+}
+
+// 一般情况下会调用 stringToRegexp() 函数来将字符串转换成正则表达式
+// 函数 stringToRegexp() 只是调用了两个函数 tokensTo Regexp () 和 parse()
+function stringToRegexp (path, keys, options) {
+  return tokensToRegExp(parse(path, options), keys, options)
+}
+```
+
+`parse()` 函数的主要作用和编译器中的词法分析比较像，它会将字符串转化为令牌数组。这些令牌分为两类，一类是**非特殊字符串**，不需要做任何处理，直接以字符串形式放入数组；另一类是**特殊字符串**，需要依赖一个正则表达式来进行处理。这个核心的正则表达式如下所示：
+
+```javaScript
+var PATH_REGEXP = /(\\.)|([\/.])?(?:(?:\:(\w+)(?:\(((?:\\.|[^\\()])+)\))?|\(((?:\\.|[^\\()])+)\))([+*?])?|(\*))/g
+```
+
+可以看到这个正则表达式中有多个通过圆括号形成的分组，通过调用 `exec()` 函数分别提取不同的信息，放入一个长度为 8 的数组中，对于不匹配的字符串则会返回 `null`。
+
+```javaScript
+PATH_REGEXP.exec("/:test(\\d+)?")
+// ["/:test(\d+)?", undefined, "/", "test", "\d+", undefined, "?", undefined]
+
+PATH_REGEXP.exec("/route(\\d+)")
+// ["(\d+)", undefined, undefined, undefined, undefined, "\d+", undefined, undefined]
+
+PATH_REGEXP.exec("/*")
+// ["/*", undefined, "/", undefined, undefined, undefined, undefined, "*"]
+```
+
+词法分析过程和前面提到的一致，即利用 `while` 循环以及正则匹配，将匹配到的 **子串** 转换成令牌对象。例如，字符串 `/user/:id`，会被转换成包含一个非特殊字符串和特殊字符串的令牌数组：
+
+```javaScript
+["/user",
+  {
+    asterisk: false
+    delimiter: "/"
+    name: "id"
+    optional: false
+    partial: false
+    pattern: "[^\/]+?"
+    prefix: "/"
+    repeat: false
+  }
+]
+```
+
+在得到令牌数组之后，下一步是调用函数 `tokensToRegExp()` 将它转换成正则表达式。对于字符串令牌，直接转化成转义后的字符串，这个转义的过程也很简单，即在 `/`、`[` 这类具有正则表达式功能的特殊字符前加上 `\`。
+
+```javaScript
+...
+if (typeof token === 'string') {
+  route += escapeString(token)
+}
+...
+function escapeString (str) {
+  return str.replace(/([.+*?=^!:${}()[\]|\/\\])/g, '\\$1')
+}
+```
+
+对于正则表达式令牌，首先放到前面提到的 `keys` 数组中，然后再对正则表达式令牌的内容进行标准化处理，拼接到最终的正则表达式字符串 `route` 中，再将 `route` 实例化为正则表达式对象，并附上 `keys` 属性。
+
+```javaScript
+...
+var prefix = escapeString(token.prefix)
+var capture = '(?:' + token.pattern + ')'
+keys.push(token)
+if (token.repeat) {
+  capture += '(?:' + prefix + capture + ')*'
+}
+if (token.optional) {
+  if (!token.partial) {
+    capture = '(?:' + prefix + '(' + capture + '))?'
+  } else {
+    capture = prefix + '(' + capture + ')?'
+  }
+} else {
+  capture = prefix + '(' + capture + ')'
+}
+route += capture
+...
+return attachKeys(new RegExp('^' + route, flags(options)), keys)
+```
+
+### 路由生成
+
+路由生成是指通过配置的请求路径字符串和参数生成对应的请求路径，比如配置的请求路径字符串 `/user/:id` 和参数 `{id: "lagou"}` 可以生成 `/user/lagou`，在 path-to-regexp 源码中对应的是函数 `compile()`。
+
+```javaScript
+/**
+* @param str 字符串，可能包含特殊字符串
+* @param options 同 pathToRegexp() 函数的 options 参数
+* @return 函数，将参数传入这个函数中可以生成结果字符串
+*/
+function compile (str, options) {
+  return tokensToFunction(parse(str, options), options)
+}
+```
+
+`compile()` 函数的内部只调用了两个函数 `parse()` 和 `tokensToFunction()`，`parse()` 函数前面已经分析过了，下面来分析函数 `tokensToFunction()`。
+
+函数 `tokensToFunction()` 的核心代码在于返回的匿名函数，匿名函数内部会遍历令牌数组，对于字符串令牌，直接拼接到生成的路径中；而对于正则表达式令牌，则会通过令牌 `token.name` 属性来找到参数对象 `obj` 对应的值。如果这个值为字符串，则判断是否匹配 `token` 中的正则表达式，匹配之后进行 `URI` 编码并拼接到结果字符串 `path` 中；如果为数组，则循环执行字符串匹配过程。返回的匿名函数部分代码如下：
+
+```javaScript
+for (var i = 0; i < tokens.length; i++) {
+  var token = tokens[i]
+  if (typeof token === 'string') {
+    path += token
+    continue
+  }
+  var value = data[token.name]
+  var segment
+  if (isarray(value)) {
+    for (var j = 0; j < value.length; j++) {
+      segment = encode(value[j])
+      path += (j === 0 ? token.prefix : token.delimiter) + segment
+    }
+    continue
+  }
+  segment = token.asterisk ? encodeAsterisk(value) : encode(value)
+  path += token.prefix + segment
+}
+return path
+```
 
 [hashchange](https://developer.mozilla.org/en-US/docs/Web/API/Window/hashchange_event)
 
